--- a/src/app/features/simulator/components/credit-data/credit-data.css
+++ b/src/app/features/simulator/components/credit-data/credit-data.css
@@ -4,10 +4,10 @@
 .loan-card {
   border-radius: 12px;
   border: 1px solid #e2e2e2;
-  background: linear-gradient(to bottom, #FAF9FD, #f5f5f6);
+  background: linear-gradient(to bottom, #f8f8fb, #f5f5f6);
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 90%;
   gap: 2rem;
   padding: 1.5rem;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 8px 0 rgba(0, 0, 0, 0.19);
@@ -22,9 +22,6 @@
   margin-bottom: 12px;
 }
 
-.loan-card-icon {
-  font-size: 18px;
-}
 
 .loan-card-grid {
   display: grid;
@@ -36,16 +33,17 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  align-items: center;
 }
 
 .field-label {
-  font-size: 1rem;
+  font-size:1rem;
   color: #555;
   font-weight: 400;
 }
 
 .field-input {
-  width: 100%;
+  width: 80%;
   padding: 8px 10px;
   border-radius: 6px;
   border: 1px solid #ddd;
