--- a/src/app/features/simulator/components/response-form-modal/response-form-modal.css
+++ b/src/app/features/simulator/components/response-form-modal/response-form-modal.css
@@ -1,5 +1,5 @@
 .container {
-  width: 85%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,7 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.5rem;
+  padding: 0.7rem;
 }
 
 
@@ -55,6 +55,7 @@
   outline: none;
   font-family: Bahnschrift, sans-serif;
   background: #ffffff;
+  color: black;
 }
 
 .field-input:focus {
