--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -23,7 +23,7 @@
       <hr>
       <li class="logout">
         <button
-          [routerLink]="['/login']"
+          (click)="onLeave()"
           routerLinkActive="active"
         >
           <img src="/assets/img/salida.svg">
